# FileCanopy

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml
benches/: scan_bench.rs
docs/: ARCHITECTURE.md
src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/analysis/: duplicates.rs  hasher.rs  largest.rs  mod.rs  tree.rs
src/cli/: args.rs  commands.rs  mod.rs
src/dedup/: mod.rs
src/history/: compare.rs  mod.rs  snapshot.rs  store.rs
src/platform/: linux.rs  mod.rs  windows.rs
src/reports/: csv.rs  excel.rs  html.rs  json.rs  mod.rs  pdf.rs
src/scanner/: line_counter.rs  metadata.rs  mod.rs  walker.rs
src/scheduler/: linux.rs  mod.rs  windows.rs
src/ui/: app.rs  message.rs  mod.rs  tasks.rs  theme.rs
src/ui/views/: about.rs  dashboard.rs  duplicates.rs  history.rs  largest.rs  line_count.rs  mod.rs  reports.rs  scan.rs  scheduler.rs  settings.rs  sidebar.rs  treemap.rs
src/ui/widgets/: mod.rs  treemap_canvas.rs
src/visualization/: mod.rs  treemap.rs
templates/: report.html
tests/: cli_smoke.rs  duplicates_tests.rs  scanner_tests.rs
