[package]
name = "filecanopy"
version = "0.1.0"
edition = "2021"
rust-version = "1.95.0"
description = "GUI disk space analyzer, treemap visualizer, duplicate finder, and report generator."
license = "MIT OR Apache-2.0"
repository = "https://github.com/duocast/filecanopy"
readme = "README.md"
keywords = ["disk", "storage", "treemap", "duplicates", "gui"]
categories = ["gui", "filesystem"]
build = "build.rs"

[[bin]]
name = "filecanopy"
path = "src/main.rs"

[lib]
name = "filecanopy"
path = "src/lib.rs"

[dependencies]
# GUI
iced = { version = "0.14.0", features = [
    "tokio",
    "canvas",
    "svg",
    "image",
    "advanced",
] }
rfd = "0.17"  # native file/folder pickers (pulls in ashpd 0.13)

# Async / parallel scanning
tokio = { version = "1.52.3", features = ["full"] }
rayon = "1.12.0"
walkdir = "2.5.0"
jwalk = "0.8.1"

# Hashing for duplicate detection
blake3 = "1.8.5"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

# Serialization / config
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"

# Storage for historical snapshots
rusqlite = { version = "0.39.0", features = ["bundled"] }

# Reports
printpdf = "0.9.1"
rust_xlsxwriter = "0.95.0"
askama = "0.16.0"
csv = "1.4.0"

# Logging / error handling
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
anyhow = "1.0.102"

# Utilities
humansize = "2"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_TaskScheduler",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["fs"] }

[build-dependencies]
winresource = "0.1.31"

[dev-dependencies]
tempfile = "3.27.0"
criterion = "0.8.2"

[[bench]]
name = "scan_bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
